# quadratauge

./: .env.example  .gitignore  .gitlab-ci.yml  .tool-versions  .yt-dlprc  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  rust.yml
bot/: Cargo.toml
bot/src/: main.rs  settings.rs
bot_codegen/: Cargo.toml
bot_codegen/src/: argument.rs  command.rs  derive.rs  lib.rs
bot_commands/: Cargo.toml
bot_commands/src/: fib.rs  inspire.rs  lib.rs  now.rs  pause.rs  ping.rs  play.rs  reddit.rs  resume.rs  skip.rs  slap.rs  stop.rs  track_loop.rs  tracks.rs  urban.rs
bot_commands/src/roll/: command.rs  dice.rs
bot_core/: Cargo.toml
bot_core/src/: client.rs  command.rs  error.rs  intents.rs  lib.rs  response.rs
bot_core/src/handler/: command.rs  voice.rs
bot_core/src/utils/: mod.rs  voice.rs
bot_yt_playlist/: Cargo.toml
bot_yt_playlist/src/: playlist.rs  ytdlp.rs
