[workspace]
members = [
    "bot_core",
    "bot_codegen",
    "bot_commands",
    "bot_yt_playlist",
    "bot"
]
resolver = "2"

[workspace.dependencies]
env_logger = "0.11.0"
log = "0.4.22"
thiserror = "2.0.18"
serde_json = "1.0.149"
derive_builder = "0.20.0"

[workspace.dependencies.serenity]
version = "0.12.2"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"]

[workspace.dependencies.songbird]
version = "0.6.0"
features = ["builtin-queue"]

[workspace.dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt-multi-thread"]

[workspace.dependencies.serde]
version = "1.0.204"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.12.28"
default-features = false
features = ["rustls-tls", "json"]

[workspace.dependencies.symphonia]
version = "0.5"
features = ["all-formats"]

[workspace.dependencies.proc-macro2]
version = "1.0.86"

[workspace.dependencies.quote]
version = "1.0.36"

[workspace.dependencies.syn]
version = "2.0.69"

[workspace.dependencies.rand]
version = "0.10.1"

[workspace.dependencies.chrono]
version = "0.4.37"

[workspace.dependencies.nonmax]
version = "0.5.5"