[package]
name = "bot"
version = "0.5.0"
edition = "2021"
description = "An extensible discord bot with support with music commands"
license = "MIT"
repository = "https://github.com/jontze/bot-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dependencies.bot_core]
path = "../bot_core"
version = "0.5.0"

[dependencies.bot_commands]
path = "../bot_commands"
version = "0.5.0"
