[package]
name = "bot"
version = "0.6.10"
edition = "2021"
description = "An extensible discord bot with support with music commands"
license = "MIT"
repository = "https://gitlab.com/LukasW01/quadratauge"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dependencies.bot_core]
path = "../bot_core"
version = "0.6.0"

[dependencies.bot_commands]
path = "../bot_commands"
version = "0.6.0"
