[package]
name = "bot_codegen"
version = "0.6.16"
edition = "2024"
description = "Library with codegen macros for the discord bot"
license = "MIT"
repository = "https://gitlab.com/LukasW01/quadratauge"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
