[package]
name = "bot_commands"
version = "0.6.16"
edition = "2021"
description = "Library with a collection of some commands for the discord bot"
license = "MIT"
repository = "https://gitlab.com/LukasW01/quadratauge"

[dependencies]
log = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
rand = { version = "0.10.1", features = ["thread_rng"] }
chrono = "0.4.37"
serde_json = "=1.0.149"

[dependencies.bot_core]
path = "../bot_core"

[dependencies.bot_codegen]
path = "../bot_codegen"

[dependencies.bot_yt_playlist]
path = "../bot_yt_playlist"
