[package]
name = "bot_commands"
version = "0.6.17"
edition = "2024"
description = "Library with a collection of some commands for the discord bot"
license = "MIT"
repository = "https://gitlab.com/LukasW01/quadratauge"

[dependencies]
log = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
nonmax = { workspace = true }

[dependencies.bot_core]
path = "../bot_core"

[dependencies.bot_codegen]
path = "../bot_codegen"

[dependencies.bot_yt_playlist]
path = "../bot_yt_playlist"
