[package]
name = "bot_core"
version = "0.6.17"
edition = "2024"
description = "Library with the core logic for the discord bot"
license = "MIT"
repository = "https://gitlab.com/LukasW01/quadratauge"

[dependencies]
log = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
symphonia = { workspace = true }
